# moonup

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  pixi.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  cicd.yml  coverage.yml  docs.yml  lint-pr.yml  release-please.yml  release.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/guide/: index.md  installation.md  usage.md
docs/reference/: index.md
scripts/: update_fixture.sh
skills/moonup/: SKILL.md
skills/moonup-github-actions/: SKILL.md
skills/moonup-github-actions/references/: examples.md
skills/moonup/references/: commands.md  install.md  pin.md  setup.md  uninstall.md  update.md
src/: archive.rs  constant.rs  fs.rs  lib.rs  reporter.rs  runner.rs  utils.rs
src/cli/: completions.rs  default.rs  install.rs  list.rs  mod.rs  pin.rs  run.rs  selfupdate.rs  show.rs  uninstall.rs  update.rs  which.rs
src/dist_server/: schema.rs
src/dist_server/schema/: legacy.rs  mod.rs  v2.rs  v3.rs
src/toolchain/: index.rs  mod.rs  package.rs  resolve.rs
tests/: test.rs  util.rs
tests/e2e/: flow.rs  mod.rs  shim.rs
tests/e2e/snapshots/: test__e2e__flow__flow_with_network_mock.snap  test__e2e__flow__liveinstall__flow_with_network.snap  test__e2e__flow__liveinstall__install.snap  test__e2e__flow__liveinstall__install_1.snap  test__e2e__flow__liveinstall__install_2.snap  test__e2e__flow__liveinstall__moon_lsp_nodebased_lsp_help.snap  test__e2e__flow__liveinstall__moon_lsp_nodebased_lsp_version.snap  test__e2e__flow__liveinstall__moon_upgrade_intercept.snap  test__e2e__flow__liveinstall__moon_use_default_version.snap  test__e2e__flow__liveinstall__moon_use_pinned_version.snap  test__e2e__flow__liveinstall__moon_use_version_from_arg.snap  test__e2e__flow__liveinstall__moonup_default.snap  test__e2e__flow__liveinstall__moonup_default_interactive.snap  test__e2e__flow__liveinstall__moonup_install_interactive.snap  test__e2e__flow__liveinstall__moonup_install_latest.snap  test__e2e__flow__liveinstall__moonup_install_neverexists.snap  test__e2e__flow__liveinstall__moonup_install_nightly.snap  test__e2e__flow__liveinstall__moonup_install_nightly_2.snap  test__e2e__flow__liveinstall__moonup_list_1.snap  test__e2e__flow__liveinstall__moonup_list_2.snap  test__e2e__flow__liveinstall__moonup_pin.snap  test__e2e__flow__liveinstall__moonup_pin_interactive.snap  test__e2e__flow__liveinstall__moonup_run.snap  test__e2e__flow__liveinstall__moonup_selfupdate_forced.snap  test__e2e__flow__liveinstall__moonup_uninstall.snap  test__e2e__flow__liveinstall__moonup_uninstall_1.snap  test__e2e__flow__liveinstall__moonup_uninstall_2.snap  test__e2e__flow__liveinstall__moonup_uninstall_clear.snap  test__e2e__flow__liveinstall__moonup_uninstall_interactive.snap  test__e2e__flow__liveinstall__moonup_uninstall_keep_cache.snap  test__e2e__flow__liveinstall__moonup_update.snap  test__e2e__flow__liveinstall__moonup_which.snap  test__e2e__flow__liveinstall__use_default_version.snap  test__e2e__flow__liveinstall__use_pinned_version.snap  test__e2e__flow__moonup_completions.snap  test__e2e__flow__moonup_default.snap  test__e2e__flow__moonup_default.snap.new  test__e2e__flow__moonup_default_2.snap  test__e2e__flow__moonup_install_list_available_mock.snap  test__e2e__flow__moonup_install_list_available_mock_2.snap  (+9 more)
tests/fixtures/dist_server/: channel-bleeding.json  channel-latest.json  channel-nightly.json  index.json
tests/fixtures/dist_server/bleeding/: aarch64-apple-darwin.json  x86_64-apple-darwin.json  x86_64-pc-windows.json  x86_64-unknown-linux.json
tests/fixtures/dist_server/latest/0.1.20240704+647946c28/: aarch64-apple-darwin.json  x86_64-apple-darwin.json  x86_64-pc-windows.json  x86_64-unknown-linux.json
tests/fixtures/dist_server/latest/0.1.20241231+ba15a9a4e/: aarch64-apple-darwin.json  x86_64-apple-darwin.json  x86_64-pc-windows.json  x86_64-unknown-linux.json
tests/fixtures/dist_server/latest/0.10.0+84519ca0a/: aarch64-apple-darwin.json  aarch64-unknown-linux.json  x86_64-pc-windows.json  x86_64-unknown-linux.json
tests/fixtures/dist_server/latest/0.10.0+e66899a54/: aarch64-apple-darwin.json  aarch64-unknown-linux.json  x86_64-pc-windows.json  x86_64-unknown-linux.json
tests/fixtures/dist_server/latest/0.10.1+a46be2066/: aarch64-apple-darwin.json  aarch64-unknown-linux.json  x86_64-pc-windows.json  x86_64-unknown-linux.json
tests/fixtures/dist_server/nightly/2025-01-02/: aarch64-apple-darwin.json  x86_64-apple-darwin.json  x86_64-pc-windows.json  x86_64-unknown-linux.json
tests/fixtures/dist_server/nightly/2025-01-05/: aarch64-apple-darwin.json  x86_64-apple-darwin.json  x86_64-pc-windows.json  x86_64-unknown-linux.json
tests/fixtures/dist_server/nightly/2026-06-24/: aarch64-apple-darwin.json  aarch64-unknown-linux.json  x86_64-pc-windows.json  x86_64-unknown-linux.json
tests/fixtures/dist_server/nightly/2026-06-25/: aarch64-apple-darwin.json  aarch64-unknown-linux.json  x86_64-pc-windows.json  x86_64-unknown-linux.json
tests/fixtures/dist_server/nightly/2026-06-26/: aarch64-apple-darwin.json  aarch64-unknown-linux.json  x86_64-pc-windows.json  x86_64-unknown-linux.json
tests/integration/: archive.rs  cli_interface.rs  mod.rs  package.rs
tests/integration/snapshots/: test__integration__cli_interface__completions.snap  test__integration__cli_interface__default.snap  test__integration__cli_interface__help.snap  test__integration__cli_interface__install.snap  test__integration__cli_interface__install_alias.snap  test__integration__cli_interface__pin.snap  test__integration__cli_interface__run.snap  test__integration__cli_interface__show.snap  test__integration__cli_interface__show_alias.snap  test__integration__cli_interface__update.snap  test__integration__cli_interface__update_alias.snap  test__integration__cli_interface__which.snap
tests/unit/: base.rs  dist_server.rs  mod.rs  resolve.rs
