[package]
name = "moonup"
description = "Manage multiple MoonBit installations"
homepage = "https://github.com/chawyehsu/moonup"
repository = "https://github.com/chawyehsu/moonup"
documentation = "https://docs.rs/moonup"
keywords = ["version-manager", "moonbit"]
categories = ["development-tools"]
version = "0.1.5"
authors = ["Chawye Hsu <su+cratesio@chawyehsu.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", features = [
    "tracing",
], default-features = false }
clap_complete = "4.5.13"
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "5.0.1"
flate2 = "1.0.34"
futures-util = "0.3.31"
indicatif = "0.17.8"
miette = { version = "7.4.0", features = ["fancy"] }
rattler_digest = "1.0.2"
remove_dir_all = "0.8.3"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
reqwest-middleware = "0.3.2"
self_update = "0.41.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tar = "0.4.43"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.13", features = ["io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.4"
zip = "2.1.3"

[target.'cfg(windows)'.dependencies]
junction = "1.1.0"

[profile.release]
debug = false
lto = "fat"
panic = "abort"
strip = "symbols"
codegen-units = 1

[profile.release-debug]
inherits = "release"
debug = true
strip = false
