[package]
name = "moonup"
description = "Manage multiple MoonBit installations"
homepage = "https://github.com/chawyehsu/moonup"
repository = "https://github.com/chawyehsu/moonup"
documentation = "https://docs.rs/moonup"
keywords = ["version-manager", "moonbit"]
categories = ["development-tools"]
version = "0.3.2"
authors = ["Chawye Hsu <su+cratesio@chawyehsu.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", features = [
    "tracing",
], default-features = false }
clap_complete = "4.5.40"
console = "0.15.11"
dialoguer = "0.11.0"
dirs = "6.0.0"
flate2 = "1.1.2"
futures-util = "0.3.31"
indicatif = "0.17.11"
miette = { version = "7.5.0", features = ["fancy"] }
rattler_digest = "1.1.2"
remove_dir_all = "1.0.0"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
reqwest-middleware = "0.3.2"
self_update = "0.42.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.120"
tar = "0.4.43"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.13", features = ["io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
which = "8.0.0"
zip = "2.3.0"

[target.'cfg(windows)'.dependencies]
junction = "1.2.0"

[dev-dependencies]
assert_fs = "1.1.3"
insta = { version = "1.43.1", features = [
    "filters",
    "glob",
    "redactions",
    "yaml",
] }
insta-cmd = "0.6.0"
mockito = "1.6.1"
predicates = "3.1.3"
temp-env = "0.3.6"

[features]
default = ["self_update"]
# Display the self-update subcommand in the --help output
self_update = []
# Test with real MOONUP_DIST_SERVER APIs, default is off
test-liveinstall = []

# https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
debug = false
lto = "fat"
panic = "abort"
strip = "symbols"
codegen-units = 1

[profile.release-debug]
inherits = "release"
debug = true
strip = false
