[package]
name = "moonup"
description = "Manage multiple MoonBit installations"
homepage = "https://github.com/chawyehsu/moonup"
repository = "https://github.com/chawyehsu/moonup"
documentation = "https://docs.rs/moonup"
keywords = ["version-manager", "moonbit"]
categories = ["development-tools"]
version = "0.4.3"
authors = ["Chawye Hsu <su+cratesio@chawyehsu.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = [
    "tracing",
], default-features = false }
clap_complete = "4.5.65"
console = "0.16.1"
dialoguer = "0.12.0"
dirs = "6.0.0"
flate2 = "1.1.5"
futures-util = "0.3.31"
indicatif = "0.18.3"
miette = { version = "7.6.0", features = ["fancy"] }
rattler_digest = "1.1.7"
remove_dir_all = "1.0.0"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
# remove `retry-policies` when `reqwest-retry` upgrades
retry-policies = "0.5.1"
self_update = "0.42.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
tar = "0.4.44"
tokio = { version = "1.43.3", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
which = "8.0.0"
zip = "2.3.0"

[target.'cfg(windows)'.dependencies]
junction = "1.3.0"

[dev-dependencies]
assert_fs = "1.1.3"
insta = { version = "1.43.1", features = [
    "filters",
    "glob",
    "redactions",
    "yaml",
] }
insta-cmd = "0.6.0"
mockito = "1.7.0"
predicates = "3.1.3"
temp-env = "0.3.6"

# expectrl has some issues on Windows
# see: https://github.com/zhiburt/expectrl/issues/52
[target.'cfg(not(windows))'.dev-dependencies]
expectrl = "0.8.0"
regex = "1.12.2"

[features]
default = ["self_update"]
# Display the self-update subcommand in the --help output
self_update = []
# Test with real MOONUP_DIST_SERVER APIs, default is off
test-liveinstall = []
# Test interactive commands that require TTY
test-interactive = []

# https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
debug = false
lto = "fat"
panic = "abort"
strip = "symbols"
codegen-units = 1

[profile.release-debug]
inherits = "release"
debug = true
strip = false
